--- a/src/decision_makeing_modules/fsm_decision_making/package.xml
+++ b/src/decision_makeing_modules/fsm_decision_making/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>highway_path_planning_with_prediction</name>
+  <name>fsm_decision_making</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="zhuwang2515@163.com">zww</maintainer>
