--- a/src/auxiliar_tools/visualization/CMakeLists.txt
+++ b/src/auxiliar_tools/visualization/CMakeLists.txt
@@ -26,6 +26,7 @@ find_package(rmw REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
@@ -38,6 +39,7 @@ ament_target_dependencies(host_vehicle_visualization
   rclcpp
   sensor_msgs
   nav_msgs
+#   std_msgs
   tf2
   tf2_ros
   visualization_msgs
@@ -55,6 +57,7 @@ ament_target_dependencies(global_path_visualization
     rclcpp
     sensor_msgs
     nav_msgs
+    std_msgs
     tf2
     tf2_ros
     visualization_msgs
