--- a/src/auxiliar_tools/visualization/package.xml
+++ b/src/auxiliar_tools/visualization/package.xml
@@ -16,12 +16,14 @@
 
   <build_depend>rclcpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <!-- <build_depend>std_msgs</build_depend> -->
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
 
   <exec_depend>ament_index_python</exec_depend>
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <!-- <exec_depend>std_msgs</exec_depend> -->
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
