--- a/src/path_planning_modules/lattice_planner/package.xml
+++ b/src/path_planning_modules/lattice_planner/package.xml
@@ -10,7 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>std_msgs</depend>
-
+  <depend>custom_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
