--- a/src/auxiliar_tools/visualization/CMakeLists.txt
+++ b/src/auxiliar_tools/visualization/CMakeLists.txt
@@ -84,4 +84,11 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+# Install launch files.
+install(DIRECTORY
+  launch
+  config
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
