--- a/src/path_planning_modules/basic_planner/CMakeLists.txt
+++ b/src/path_planning_modules/basic_planner/CMakeLists.txt
@@ -44,4 +44,11 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+# Install launch files.
+install(DIRECTORY
+  launch
+  config
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
