--- a/src/chasis_modules/matrix_interfaces/package.xml
+++ b/src/chasis_modules/matrix_interfaces/package.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>custom_interfaces</name>
+  <name>matrix_interfaces</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="zhuwang2515@163.com">zww</maintainer>
+  <maintainer email="jianghaotbs@163.com">jh</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <depend>geometry_msgs</depend>
 
-  <build_depend>builtin_interface</build_depend>
+
   <build_depend>rosidl_default_generators</build_depend>
-  <exec_depend>builtin_interface</exec_depend>
+
   <exec_depend>rosidl_default_runtime</exec_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
