--- a/src/decision_makeing_modules/fsm_decision_making/package.xml
+++ b/src/decision_makeing_modules/fsm_decision_making/package.xml
@@ -10,7 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>std_msgs</depend>
-  <depend>custom_interfaces</depend>
+  <depend>behavior_decision_interface</depend>
 
 
   <test_depend>ament_lint_auto</test_depend>
