--- a/src/auxiliar_tools/visualization/config/map_path.yaml
+++ b/src/auxiliar_tools/visualization/config/map_path.yaml
@@ -2,5 +2,6 @@ global_path_visualization:
   ros__parameters:
     # global_map_name_parameter: "/src/location_modules/integrated_navigation_system/map_after_preprocess/2022_12_28_18_38_28_ins_data_map_after_preprocess.csv"
     # global_map_name_parameter: "/src/location_modules/integrated_navigation_system/map_after_preprocess/2023_02_15_09_52_47_ins_data_map.csv"
-    global_map_name_parameter: "/src/location_modules/integrated_navigation_system/map_after_preprocess/2023_02_01_09_19_01_ins_data_map.csv"
+    # global_map_name_parameter: "/src/location_modules/integrated_navigation_system/map_after_preprocess/2023_02_01_09_19_01_ins_data_map.csv" # 直道 仿真用，0位于车道中心
+    global_map_name_parameter: "/src/location_modules/integrated_navigation_system/map_after_preprocess/2023_03_01_20_42_40_ins_data_map.csv" # 矩阵车上用
     velocity_curve_name_parameter: "/src/location_modules/integrated_navigation_system/map_after_preprocess/acc_40.csv"
